<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <string name="first">숫자1</string>
    <string name="second">숫자2</string>
    <string name="add">더하기</string>
    <string name="sub">빼기</string>
    <string name="mul">곱하기</string>
    <string name="div">나누기</string>
    <string name="mod">나머지 값</string>
    <string name="result">계산결과 : </string>
</resources>